hphp/test/slow/parser/initializer-static-2.php.expectf

Fatal error: Invalid expression in constant initializer in %s/initializer-static-2.php on line 4
